Refactor package structure and improve user functionality
Moved model classes to clearer sub-packages for better organization. Enhanced `User` model with new methods like `deactivate` and `updateUserDetails`, and simplified `UserServiceImpl` logic. Adjusted tests and repository accordingly. Added IDE configurations for project consistency.